# claude-skills

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.claude/commands/: improve.md
commands/: list.md  validate.md
plugins/architectural-analysis/.claude-plugin/: plugin.json
plugins/architectural-analysis/code-audit-deep-workspace/: grade.py
plugins/architectural-analysis/commands/: audit.md  hotspots.md
plugins/cli-anything-go/: HARNESS-GO.md  QUICKSTART.md
plugins/cli-anything-go/.claude-plugin/: plugin.json
plugins/cli-anything-go/commands/: cli-anything-go.md  refine.md  test.md
plugins/cli-anything-go/templates/: formatter.go.tmpl  main.go.tmpl  skin.go.tmpl
plugins/commit/.claude-plugin/: plugin.json
plugins/engineering-principles/.claude-plugin/: plugin.json
plugins/futurism-design/: README.md
plugins/futurism-design/.claude-plugin/: plugin.json
plugins/opsx-ext/.claude-plugin/: plugin.json
plugins/quality-assurance/: .gitignore
plugins/quality-assurance/.claude-plugin/: plugin.json
plugins/quality-assurance/commands/: compare-screenshots.md
plugins/quality-assurance/skills/smoke-test/evals/fixtures/axum-app/: Cargo.toml
plugins/quality-assurance/skills/smoke-test/evals/fixtures/axum-app/src/: main.rs
plugins/quality-assurance/smoke-test-workspace/: trigger_eval.json
plugins/skill-builder/: NOTICE.md  README.md
plugins/skill-builder/.claude-plugin/: plugin.json
skills/commit/: SKILL.md
skills/task/: SKILL.md
skills/tdd/: SKILL.md
templates/: resolve_cli_test.go.tmpl  root.go.tmpl
(+252 files in other folders)
